--- a/app/src/main/res/layout/activity_admin_page.xml
+++ b/app/src/main/res/layout/activity_admin_page.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,6 +8,14 @@
     android:padding="16dp"
     tools:context=".AdminPage">
 
+    <TextView
+        android:id="@+id/textoPrueba"
+        android:layout_width="match_parent"
+        android:layout_alignParentTop="true"
+        android:layout_height="25dp"
+        android:textAppearance="@style/TextAppearance.AppCompat.Large">
 
 
-</LinearLayout>
+    </TextView>
+
+</RelativeLayout>
