--- a/app/src/main/res/layout/activity_admin.xml
+++ b/app/src/main/res/layout/activity_admin.xml
@@ -1,30 +1,25 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="16dp"
     tools:context=".AdminPage">
 
 
-   <androidx.appcompat.widget.Toolbar
-       android:id="@+id/Toolbar_dani"
-       android:layout_width="match_parent"
-       android:layout_height="?attr/actionBarSize"
+    <include
+        android:id="@+id/toolbar"
+        layout="@layout/toolbar" />
 
-       android:background="@color/colorPrimary"
-       android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
-       app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/recycler_view"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_alignParentTop="true"
+        android:layout_marginLeft="5dp"
+        android:layout_marginTop="60dp"
+        android:layout_marginRight="5dp">
 
-   <androidx.recyclerview.widget.RecyclerView
-       android:id="@+id/recycler_view"
-       android:layout_alignParentTop="true"
-       android:layout_marginTop="60dp"
-       android:layout_width="match_parent"
-       android:layout_height="match_parent">
-
-   </androidx.recyclerview.widget.RecyclerView>
+    </androidx.recyclerview.widget.RecyclerView>
 
 </RelativeLayout>
