edicion de campos

--- a/app/src/main/res/layout/activity_info_user.xml
+++ b/app/src/main/res/layout/activity_info_user.xml
@@ -93,6 +93,8 @@
         android:layout_alignRight="@id/mi_info_nombre"
          android:drawableBottom="@android:drawable/ic_menu_edit"
          android:backgroundTint="#FFFFFF"
+         android:onClick="cambiarNombre"
+
         />
 
     <Button
