--- a/app/src/main/res/menu/menu_dani.xml
+++ b/app/src/main/res/menu/menu_dani.xml
@@ -6,7 +6,8 @@
         android:id="@+id/action_buscador"
         android:title="Buscador"
         android:icon="@drawable/buscador"
-        app:showAsAction="ifRoom"
+        app:actionViewClass="android.widget.SearchView"
+        app:showAsAction="ifRoom|collapseActionView"
         />
     <item
         android:id="@+id/action_settings"
