--- a/app/src/main/res/layout/activity_cerrar_sesion.xml
+++ b/app/src/main/res/layout/activity_cerrar_sesion.xml
@@ -32,4 +32,11 @@
 
     </com.google.android.gms.ads.AdView>
 
+    <Button
+        android:id="@+id/refrescar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Refrescar" />
+
+
 </LinearLayout>
